--- a/xss.htm
+++ b/xss.htm
@@ -1,4 +1,7 @@
 <html>
+	<head>
+		<title>HTML Encoding and Base64-Konverter</title>
+	</head>
 <body>
   <form name="xss" action="">
 		<b>XSS Input:</b>
